--- a/hello.html
+++ b/hello.html
@@ -5,6 +5,6 @@
 </head>
 <body>
 	Hello World!
-	Another feature named "name"!
+	Another feature named "name"! this is in branch "name"
 </body>
 </html>
