contents in branch named master

--- a/hello.html
+++ b/hello.html
@@ -5,6 +5,6 @@
 </head>
 <body>
 	Hello World!
-	Another feature named "name"!
+	Another feature named "name"! This is in branch named master
 </body>
 </html>
